# python-project-52

./: .env  Makefile  README.md  build.sh  pyproject.toml  requirements.txt
.github/workflows/: django.yml
task_manager/: settings.py  urls.py  views.py
task_manager/css/: style.css
task_manager/labels/: forms.py  models.py  tests.py  views.py
task_manager/labels/migrations/: 0001_initial.py  0002_alter_label_created_at_alter_label_name.py
task_manager/statuses/: models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/tasks/: filters.py  forms.py  models.py  tests.py  views.py
task_manager/tasks/migrations/: 0001_initial.py
task_manager/templates/: base.html  index.html
task_manager/templates/labels/: create.html  delete.html  labels.html  update.html
task_manager/templates/statuses/: create.html  delete.html  statuses.html  update.html
task_manager/templates/tasks/: create.html  delete.html  details.html  tasks.html  update.html
task_manager/templates/users/: delete.html  login.html  signup.html  update.html  user_confirm_delete.html  user_form.html  users.html
task_manager/users/: forms.py  mixins.py  tests.py  urls.py  views.py
