[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dj-database-url>=2.3.0",
    "django>=5.2.1",
    "django-bootstrap5>=25.1",
    "django-filter>=25.1",
    "gunicorn>=23.0.0",
    "python-dotenv>=1.1.0",
    "rollbar>=1.3.0",
    "ruff>=0.11.10",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
 
[tool.hatch.build.targets.wheel]
packages = ["task_manager"]

[tool.black]
line-length = 80
multi-line-output = 3
include-trailing-comma = true
